@@ -7,6 +7,9 @@ http://couchdb-python.googlecode.com/svn/tags/0.6.0
    (issue 51).
  * Added a `config` property to the `client.Server` class (issue 67).
  * Added a `compact()` method to the `client.Database` class (issue 37).
+ * Changed the `update()` method of the `client.Database` class to simplify
+   the handling of errors. The method now returns a list of `(success, docid,
+   rev_or_exc)` tuples. See the docstring of that method for the details.
 
 
 Version 0.5
